--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,13 @@ dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.0'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
     compile group: 'org.fxmisc.richtext', name: 'richtextfx', version: '0.10.5'
+
+    compileOnly 'org.projectlombok:lombok:1.18.16'
+    annotationProcessor 'org.projectlombok:lombok:1.18.16'
+    testCompileOnly 'org.projectlombok:lombok:1.18.16'
+    testAnnotationProcessor 'org.projectlombok:lombok:1.18.16'
+    
+    compile "com.fasterxml.jackson.dataformat:jackson-dataformat-xml:2.9.9"
 }
 
 test {
