--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,13 @@ repositories {
     maven { url 'https://jitpack.io' }
     jcenter()
 }
+jacoco {
+    toolVersion = "0.8.6"
+}
+
+jacocoTestReport {
+    dependsOn test
+}
 
 dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.0'
@@ -33,6 +40,7 @@ test {
     testLogging {
         events 'passed', 'skipped', 'failed'
     }
+    finalizedBy jacocoTestReport
 }
 
 javafx {
