changes to DrumNote.java

--- a/build.gradle
+++ b/build.gradle
@@ -2,13 +2,23 @@ plugins {
     id 'java'
     id 'application'
     id 'org.openjfx.javafxplugin' version '0.0.8'
+    id 'jacoco'
 }
 
-group 'org.openjfx'
+group 'GUI'
 version '1.0-SNAPSHOT'
 
 repositories {
     mavenCentral()
+    maven { url 'https://jitpack.io' }
+    jcenter()
+}
+jacoco {
+    toolVersion = "0.8.6"
+}
+
+jacocoTestReport {
+    dependsOn test
 }
 
 dependencies {
@@ -20,8 +30,13 @@ dependencies {
     annotationProcessor 'org.projectlombok:lombok:1.18.16'
     testCompileOnly 'org.projectlombok:lombok:1.18.16'
     testAnnotationProcessor 'org.projectlombok:lombok:1.18.16'
-    
+
     compile "com.fasterxml.jackson.dataformat:jackson-dataformat-xml:2.9.9"
+
+    testCompile "org.testfx:testfx-core:4.0.16-alpha"
+    testCompile "org.testfx:testfx-junit5:4.0.16-alpha"
+
+    implementation 'com.github.JensPiegsa:jfugue:5.0.9'
 }
 
 test {
@@ -29,6 +44,7 @@ test {
     testLogging {
         events 'passed', 'skipped', 'failed'
     }
+    finalizedBy jacocoTestReport
 }
 
 javafx {
@@ -43,4 +59,4 @@ run {
     }
 }
 
-mainClassName = 'org.openjfx.MainApp'
+mainClassName = 'GUI.MainApp'
