--- a/build.gradle
+++ b/build.gradle
@@ -8,15 +8,15 @@ plugins {
 group 'GUI'
 version '1.0-SNAPSHOT'
 
-//----------for debugging only--------
-allprojects {
-    gradle.projectsEvaluated {
-        tasks.withType(JavaCompile) {
-            options.compilerArgs << "-Xlint:unchecked" << "-Xlint:deprecation"
-        }
-    }
-}
-//-------------
+////----------for debugging only--------
+//allprojects {
+//    gradle.projectsEvaluated {
+//        tasks.withType(JavaCompile) {
+//            options.compilerArgs << "-Xlint:unchecked" << "-Xlint:deprecation"
+//        }
+//    }
+//}
+////-------------
 
 repositories {
     mavenCentral()
