started working on a new splashscreen that uses javafx. restored the note player functionality

--- a/build.gradle
+++ b/build.gradle
@@ -20,8 +20,8 @@ version '1.0-SNAPSHOT'
 
 repositories {
     mavenCentral()
-    //maven { url 'https://jitpack.io' }
-    //jcenter()
+    maven { url 'https://jitpack.io' }
+    jcenter()
 }
 jacoco {
     toolVersion = "0.8.6"
@@ -44,7 +44,7 @@ dependencies {
     testImplementation "org.testfx:testfx-core:4.0.16-alpha"
     testImplementation "org.testfx:testfx-junit5:4.0.16-alpha"
 
-    //implementation 'com.github.JensPiegsa:jfugue:5.0.9'
+    implementation 'com.github.JensPiegsa:jfugue:5.0.9'
 }
 
 test {
